{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 18,
  "lineage": "acdc4d78-c700-1d70-910d-406aec97f758",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/587b0929-d04a-4d10-a3c1-7a4b9aeafaa3/resourceGroups/rg-cp2-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-cp2-vm",
            "location": "francecentral",
            "name": "nsg-cp2-vm",
            "resource_group_name": "rg-cp2-devops",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "https_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/587b0929-d04a-4d10-a3c1-7a4b9aeafaa3/resourceGroups/rg-cp2-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-cp2-vm/securityRules/allow-https-app",
            "name": "allow-https-app",
            "network_security_group_name": "nsg-cp2-vm",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-cp2-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/587b0929-d04a-4d10-a3c1-7a4b9aeafaa3/resourceGroups/rg-cp2-devops/providers/Microsoft.Network/networkSecurityGroups/nsg-cp2-vm/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-cp2-vm",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-cp2-devops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.main",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/587b0929-d04a-4d10-a3c1-7a4b9aeafaa3/resourceGroups/rg-cp2-devops/providers/Microsoft.Network/publicIPAddresses/pip-cp2-vm",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.89.135.199",
            "ip_version": "IPv4",
            "location": "francecentral",
            "name": "pip-cp2-vm",
            "resource_group_name": "rg-cp2-devops",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}